<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ActivitySplashScreen">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/doctor_group" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9C6200EA">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appNameTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:text="@string/specialist"
                android:textColor="#00FFFF"
                android:textSize="25sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/appNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/charu_blood"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="25sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/AnimationId"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_colorFilter="#fff"
                    app:lottie_rawRes="@raw/heartbeat" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/BottomTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developed_by"
                    android:textColor="#fff"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/pacifico"
                    android:text="@string/ShineUpLab"
                    android:textColor="#fff"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>